# churn-prediction

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
artifacts/: best_model.xgb  feature_list.json  metadata.json  threshold.txt
config/: config.yaml
notebooks/: churn_data_analysis.ipynb  data_preparation_and_model_training.ipynb  overall_data_analysis.ipynb
src/: dependencies.py  main.py
src/core/: data_access.py  features.py  model_io.py  train.py  training_pipeline.py
src/engine/controller/: churn_detection.py  types.py
src/engine/service/: churn_detection.py  types.py
